--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<p>Lorem ipsum dolor sit amet.</p>
+<p>Lorem ipsum dolor sit amet.(hero section) </p>
 <fieldset>checkout
     <legend>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, placeat.</legend>
 </fieldset>
